--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <script src="./index.js" defer></script>
+    <link rel="shortcut icon" href="#" />
     <title>Transform & Animations</title>
   </head>
   <body>
@@ -19,8 +21,8 @@
         magni.
       </div>
       <div class="cards">
-        <div class="card">1</div>
-        <div class="card">2</div>
+        <div class="card cardOne">1</div>
+        <div class="card cardTwo">2</div>
         <div class="card">3</div>
         <div class="card">4</div>
       </div>
